// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addCohortProject should create an action 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": undefined,
    "key": "cohort-project-add",
    "namespace": "default",
    "suffix": "COHORT_PROJECT_ADD",
  },
  "payload": Object {
    "data": Object {
      "id": "projectId",
    },
    "headers": undefined,
    "method": "POST",
    "params": undefined,
    "url": "/cohorts/someone/projects",
  },
  "type": "@@api-client/API_REQUEST/COHORT_PROJECT_ADD",
}
`;

exports[`getCohortProjects should create an action 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": 300000,
    "key": "cohorts/someone/projects",
    "namespace": "default",
    "suffix": "COHORT_PROJECTS",
  },
  "payload": Object {
    "data": undefined,
    "headers": undefined,
    "method": "GET",
    "params": undefined,
    "url": "/cohorts/someone/projects",
  },
  "type": "@@api-client/API_REQUEST/COHORT_PROJECTS",
}
`;

exports[`getCohortUsers should create an action 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": 300000,
    "key": "/cohorts/something/users",
    "namespace": "default",
    "suffix": "COHORT_USERS",
  },
  "payload": Object {
    "data": undefined,
    "headers": undefined,
    "method": "GET",
    "params": undefined,
    "url": "/cohorts/something/users",
  },
  "type": "@@api-client/API_REQUEST/COHORT_USERS",
}
`;

exports[`getCohorts should create an action 1`] = `
Object {
  "meta": Object {
    "anonymous": undefined,
    "expiration": 3600000,
    "key": "cohorts",
    "namespace": "default",
    "suffix": "COHORTS",
  },
  "payload": Object {
    "data": undefined,
    "headers": undefined,
    "method": "GET",
    "params": Object {
      "campus": undefined,
      "limit": 100,
      "page": 1,
      "program": undefined,
      "track": undefined,
    },
    "url": "/cohorts",
  },
  "type": "@@api-client/API_REQUEST/COHORTS",
}
`;
